--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 
 DB_USERNAME= root
-DB_PASSWORD= root
+DB_PASSWORD=
 DB_HOST= localhost
 DB_DATABASE=dbvacations
-DB_PORT=8889
+DB_PORT=3306
 DB_DIALECT=mysql
