--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DB_USERNAME= root
 DB_PASSWORD=""
-DB_HOST= localhost
+giDB_HOST= localhost
 DB_DATABASE=dbvacations
 DB_PORT=3306
 DB_DIALECT=mysql
