--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 DB_USERNAME= root
 
-DB_PASSWORD= ""
+DB_PASSWORD= "root"
 
 
 giDB_HOST= localhost
 DB_DATABASE=dbvacations
-DB_PORT=3306
+DB_PORT=8889
 DB_DIALECT=mysql
