--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "method-override": "^3.0.0",
     "multer": "^1.4.2",
     "mysql2": "^2.2.5",
+    "nodemon": "^2.0.9",
     "sequelize": "^6.6.2"
   },
   "devDependencies": {
