--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DB_USERNAME= root
-DB_PASSWORD= "root"
+DB_PASSWORD=
 giDB_HOST= localhost
 DB_DATABASE=dbvacations
-DB_PORT=8889
+DB_PORT=
 DB_DIALECT=mysql
