caffarone-frontEnd login

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DB_USERNAME= root
-DB_PASSWORD= 
+DB_PASSWORD= root
 DB_HOST= 127.0.0.1
 DB_DATABASE= dbvacations
-DB_PORT=3306
+DB_PORT=8889
 DB_DIALECT=mysql
