--- a/.env
+++ b/.env
@@ -1,6 +1,9 @@
-DB_USERNAME= root
-DB_PASSWORD= 
-DB_HOST= 127.0.0.1
-DB_DATABASE= dbvacations
+DB_USERNAME= be746c8c643c0d
+DB_PASSWORD= de6c190e
+DB_HOST= us-cdbr-east-04.cleardb.com
+DB_DATABASE= heroku_a537d65da4a5405
 DB_PORT=3306
 DB_DIALECT=mysql
+
+
+    
